# tmonacodel

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
notebooks/: explore.ipynb  qualification_simulation.ipynb  race_simulation.ipynb  tournament_simulation.ipynb
notebooks/.ipynb_checkpoints/: explore-checkpoint.ipynb
tests/: conftest.py  test_elimination.py  test_player.py  test_race.py  test_scoring.py  test_season.py  test_simulation.py  test_tournament.py
tmonacodel/: __init__.py  aggregation.py  config.py  cup.py  data_loader.py  elimination.py  match.py  player.py  race.py  racer.py  scoring.py  season.py  simulation.py  tournament.py  types.py
